// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login snapshots fresh page load 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Login
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="emailLabel"
        >
          Email
        </label>
        <input
          aria-labelledby="emailLabel"
          class="form-control form-control-lg"
          id="email"
          placeholder="email"
          type="email"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="passwordLabel"
        >
          Password
        </label>
        <input
          aria-labelledby="passwordLabel"
          class="form-control form-control-lg"
          id="password"
          placeholder="password"
          type="password"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Log In
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`Login snapshots invalid parameters 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Login
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="emailLabel"
        >
          Email
        </label>
        <input
          aria-labelledby="emailLabel"
          class="form-control form-control-lg"
          id="email"
          placeholder="email"
          type="email"
          value="a@a.a"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="passwordLabel"
        >
          Password
        </label>
        <input
          aria-labelledby="passwordLabel"
          class="form-control form-control-lg"
          id="password"
          placeholder="password"
          type="password"
          value="qwerty1!"
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Log In
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`Login snapshots valid parameters 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Login
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="emailLabel"
        >
          Email
        </label>
        <input
          aria-labelledby="emailLabel"
          class="form-control form-control-lg"
          id="email"
          placeholder="email"
          type="email"
          value="totally@valid.email"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="passwordLabel"
        >
          Password
        </label>
        <input
          aria-labelledby="passwordLabel"
          class="form-control form-control-lg"
          id="password"
          placeholder="password"
          type="password"
          value="qwerty1!"
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Log In
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;
